--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -1,6 +1,6 @@
 div(ng-controller='navController' Id="navDiv")
   .left-nav.top.l1-nav
-    a.popover-dismiss(ng-click="ctrl.swapUsers()" tabindex="0" style="display: block;" data-toggle="popover" data-placement="bottom" data-trigger="focus" title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?")
+    a.popover-dismiss(ng-click="ctrl.swapUsers()" tabindex="0" style="display: block;")
       .user-pane
         .user-wrapper
           img.user-icon(src="images/usericon.png")
@@ -9,7 +9,7 @@ div(ng-controller='navController' Id="navDiv")
             i(class="fa fa-sort-desc fa-1")
     .nav-items
       ul.main-nav
-        li(ng-click="ctrl.openL2NavForItem(item,true)" ng-repeat="item in navItems" ng-class="{'open-nav-item' : ctrl.IsOpenItem(item.Id)}")
+        li(ng-click="ctrl.openL2NavForItem(item,true)" ng-repeat="item in navItems track by $index" ng-class="{'open-nav-item' : ctrl.IsOpenItem(item.Id)}")
           div {{item.Name}}
       ul.secondary-nav
         li(ng-click="ctrl.search('Forms & Templates')")
