Small style updates

--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -57,7 +57,7 @@ div(ng-controller='navController' Id="navDiv")
   .top-nav
     .top-wrapper
       .top-row
-        img.logo(src="images/epsblogo.png" ng-click="ctrl.redirectHome()")
+        img.logo(src="images/epsblogo.png" ng-click="ctrl.redirectHome()" style="cursor: pointer")
         img(src="images/apps.png" style="padding-right: 15px;padding-top: 20px;" ng-click="ctrl.openApplicationDrawer()").pull-right
         img(src="images/menuitems.png" style="padding-right: 15px;padding-top: 20px;").pull-right
       .search-bar.col-md-12.no-padding
