--- a/public/curriculumnAndAssesment.jade
+++ b/public/curriculumnAndAssesment.jade
@@ -1,4 +1,4 @@
-div(Id="curriculumDiv" ng-controller='curriculumController')
+div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
   h2(style="padding-bottom: 15px;") District resources
   div
     ul.nav.nav-tabs(role='tablist' id="myTabs")
