--- a/public/news.jade
+++ b/public/news.jade
@@ -1,4 +1,4 @@
-div(Id="newsDiv" ng-controller='newsController')
+div(Id="newsDiv" ng-controller='newsController').content-area
   div.news-block-header
     h1 News
     div 
