--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -27,7 +27,9 @@ div(ng-controller='navController' Id="navDiv")
         li(ng-click="ctrl.redirectToL1Nav(selectedItemIds[0])" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}")
           div {{selectedItemIds[0].Name}} Overview
         li(ng-repeat="item in l2NavItems" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}" ng-click="ctrl.openL3NavForItem(item,false,0,true)")
-          div {{item.Name}}
+          div
+            span.nav-menu-text{{item.Name}}
+            i.fa.fa-angle-right.pull-right(ng-show="item.hasChildren")
   .left-nav.l3-nav(style='z-index: 800')
     .nav-items
       .nav-header {{selectedItemIds[1].Name}}        
@@ -35,7 +37,9 @@ div(ng-controller='navController' Id="navDiv")
         li(ng-click="ctrl.redirectToL2Nav(selectedItemIds[1])" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}")
           div {{selectedItemIds[1].Name}} Overview
         li(ng-repeat="item in l3NavItems" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}" ng-click="ctrl.openL4NavForItem(item,false,0,true)")
-          div {{item.Name}}
+          div
+            span.nav-menu-text{{item.Name}}
+            i.fa.fa-angle-right.pull-right(ng-show="item.hasChildren")
   .left-nav.l4-nav(style='z-index: 700')
     .nav-header {{selectedItemIds[2].Name}}
     .nav-items        
@@ -58,7 +62,7 @@ div(ng-controller='navController' Id="navDiv")
     .top-wrapper
       .top-row
         img.logo(src="images/epsblogo.png" ng-click="ctrl.redirectHome()" style="cursor: pointer")
-        img(src="images/apps.png" style="padding-right: 15px;padding-top: 20px;" ng-click="ctrl.openApplicationDrawer()").pull-right
+        img(src="images/apps.png" id="appsIcon" style="padding-right: 15px;padding-top: 20px;" ng-click="ctrl.openApplicationDrawer()").pull-right
         img(src="images/menuitems.png" style="padding-right: 15px;padding-top: 20px;").pull-right
       .search-bar.col-md-12.no-padding
         label(for="searchText" id="searchLabel")
