--- a/public/index.jade
+++ b/public/index.jade
@@ -1,4 +1,4 @@
-div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController')
+div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController' style="padding-top: 175px")
     .info-wrapper.full-width.no-padding
       .primary-info.no-padding
         .info-wrapper-center
@@ -29,7 +29,7 @@ div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController')
                   span.bold Quick Links
                   span(style="font-style: italic;")  for Custodians
                 .top-content(style="margin-top: 30px;")
-                  .bold.small-text(style="margin-bottom: 5px") TOP CONTENT
+                  .bold(style="margin-bottom: 5px; font-size: 1.3em;") TOP CONTENT
                   div(ng-repeat="item in topContent" ng-show="item.Role == 'Custodian'" style="margin-left: 15px;")
                     a(ng-click="ctrl.redirectToTop(item)") 
                       i.fa.fa-file-o(style="margin-right:10px;")
@@ -48,7 +48,7 @@ div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController')
                   option(disabled="" selected="" value="") Subject...
                 button(ng-click="ctrl.openSite()" ng-disabled="selectedShareSite == ''") GO
                 .top-content(style="margin-top: 30px;").pull-left
-                  .bold.small-text(style="margin-bottom: 5px") TOP CONTENT
+                  .bold(style="margin-bottom: 5px; font-size: 1.3em;") TOP CONTENT
                   div(ng-repeat="item in topContent" ng-show="item.Role == 'Teacher'" style="margin-left: 15px;")
                     a(ng-click="ctrl.redirectToTop(item)")
                       i.fa.fa-file-o(style="margin-right:10px;")
