--- a/public/searchResults.jade
+++ b/public/searchResults.jade
@@ -1,4 +1,4 @@
-div(ng-controller='searchController' Id="searchDiv")
+div(ng-controller='searchController' Id="searchDiv").content-area
   div(style="padding")
       h3(style="margin-left: 15px;") Search Results for '{{searchString}}'
   div.search-flex-wrapper(style="display: flex;")
