--- a/public/css/main.less
+++ b/public/css/main.less
@@ -62,6 +62,20 @@
 @DefaultPadding : 15px;
 @NeedToKnowHeight: 500px;
 
+
+.teacher-select{
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+.techer-select-button{
+  background: white;
+  border-radius: 5px;
+  padding: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 1px solid rgb(169, 169, 169);;
+}
 span.nav-menu-text{
   width: 85%;
   display: inline-block;
@@ -201,14 +215,20 @@ padding-right: 15px;
   width: 100%;
 }
 .need-to-know-wrapper{
-  width: 100%;
   height: 500px;
   background-color: white;
   margin: calc(30px);
-  border-bottom: 2px solid @gray-dark;
-  /* border-bottom: 2px solid coral; */
+
   padding-right: 15px;
   overflow-y: auto;
+}
+.scroll-footer{
+  margin-left: 30px;
+    margin-right: 30px;
+    padding: 10px;
+    text-align: center;
+    margin-top: -30px;
+    background: @gray-lighter;
 }
 .story-info{
   padding:@DefaultPadding;
@@ -280,6 +300,7 @@ text-overflow: ellipsis; // This is where the magic happens
 .panel-document{
   padding-right:  calc(@DefaultPadding * 4);
 }
+this is a typing test cool everything seems up to date
 
 .panel-group .panel+.panel {
   margin-top: 0 !important;
