--- a/public/css/main.less
+++ b/public/css/main.less
@@ -62,7 +62,13 @@
 @DefaultPadding : 15px;
 @NeedToKnowHeight: 500px;
 
-
+tr th{
+  padding-left: 10px;
+}
+tr td{
+  padding: 10px;
+  vertical-align: baseline;
+}
 .teacher-select{
   padding: 10px;
   border-radius: 5px;
