Nav drawer styling
Updated nav drawer to reflect new format

--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -52,14 +52,20 @@ div(ng-controller='navController' Id="navDiv")
           div {{item.Name}}
   .right-nav.application-drawer(style='z-index: 1000; color: white !important')
     .application-header Applications
-    a.all-apps-link.pull-right(ng-click="ctrl.redirectToL1Nav(applicationsItem)") All apps >>
-    .application-item(ng-repeat="app in applications")
-      .application-icon.pull-left
-        i.fa.fa-star(ng-show="app.Favorite == 'true'")
-        i.fa.fa-star-o(ng-show="app.Favorite != 'true'")
-      .application-info.pull-right
-        span.application-name {{app.Name}}
-        .application-desc {{app.Description}}
+    a.all-apps-link.text-muted.pull-right(ng-click="ctrl.redirectToL1Nav(applicationsItem)") All apps >>
+    table
+      tbody
+        tr(ng-repeat="app in applications")
+          td
+            i.fa.fa-picture-o
+          td
+            span {{app.Name}}
+            br
+            span.application-desc.text-muted {{app.Description}}
+          td
+            i.fa.fa-star(ng-show="app.Favorite == 'true'")
+            i.fa.fa-star-o(ng-show="app.Favorite != 'true'")
+      
   .top-nav
     .top-wrapper
       .top-row
