--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1111,11 +1111,17 @@ position: absolute;
   right:0 !important;
   overflow-y: auto;
 }
+.slide-nav{
+  max-height: 600px;
+  overflow-y: auto;
+  margin-top: 0 !important;
+}
 
 .left-nav{
   width: @NavWidth;
   margin-top: @topNavBarHeight;
   top: 0;
+  overflow-y: auto;
   background-color: white;
   border-right: 1px solid @gray-light;
   position: fixed;
