--- a/public/css/main.less
+++ b/public/css/main.less
@@ -56,9 +56,9 @@
 @NavItemHeight: 60px;
 @SubNavItemHeight: 30px;
 @NavWidth:225px;
-@l2NavColor: #0E0081;
-@l3NavColor: #341989;
-@l4NavColor: #4A457A;
+@l2NavColor: black;
+@l3NavColor: lighten(black, 10);
+@l4NavColor: lighten(black, 20);
 @DefaultPadding : 15px;
 @NeedToKnowHeight: 500px;
 
@@ -1112,7 +1112,8 @@ position: absolute;
   overflow-y: auto;
 }
 .slide-nav{
-  max-height: 600px;
+  height: 100%;
+  max-height: 700px;
   overflow-y: auto;
   margin-top: 0 !important;
 }
