District Resources Update
Updated styling and layout for Distric Resources section. Added the
ability to navigate to teacher made resources, loading description from
other content db, and added mock sort by for curric & teaching topics
tab

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -423,7 +423,10 @@ this is a typing test cool everything seems up to date
   }
 }
 
-
+.clear-button{
+  background: white;
+  border: none;
+}
 .resources-wrapper{
   padding-left: 15px;
   padding-right: 15px;
@@ -477,19 +480,23 @@ this is a typing test cool everything seems up to date
 
 .chips-wrapper{
   display: flex;
-  height: 20px;
+  height: 35px;
 }
 
 .filter-chip{
-  background-color: @gray-lighter;
+  background-color: black;
   padding-left: 5px;
   padding-right: 5px;
   border-radius: 5px;
   margin-right: 10px;
+  font-size: 1.3em;
   cursor: pointer;
+  display: table;
+  color: white;
+  vertical-align: middle;
 }
 .remove-chip{
-  color: @gray-light;
+  color: white;
 }
 .bold{
   font-weight: bold !important;
