--- a/public/curriculumnAndAssesment.jade
+++ b/public/curriculumnAndAssesment.jade
@@ -1,5 +1,13 @@
 div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
-  h2(style="padding-bottom: 15px;") District resources
+  div(style='display: flex;')
+    div.pull-left(style="width: 50%")
+      h2(style="padding-bottom: 15px;") District resources
+      p {{currentItem.Description}}
+    div.pull-right(style="width: 50%; padding-left: 15px; align-self: center;")
+      span.bold Teacher made curriculum resources
+      select.teacher-select(selectpicker=''  style="width: 75%" ng-model="selectedShareSite" ng-options="site.Url as site.Name for site in shareSites track by site.Url")
+        option(disabled="" selected="" value="") Subject...
+      button.techer-select-button(ng-click="ctrl.openSite()" ng-disabled="selectedShareSite == ''") GO
   div
     ul.nav.nav-tabs(role='tablist' id="myTabs")
       li.active(role='presentation')
@@ -24,9 +32,13 @@ div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
                 span {{tag.Tag}}
                 br 
               div(ng-show="subjectTags.length > maxSubjects")
-                button(ng-click="maxSubjects = subjectTags.length") + See More
+                button.clear-button(ng-click="maxSubjects = subjectTags.length")
+                  i.fa.fa-plus-square-o
+                  span  See More
               div(ng-show="subjectTags.length == maxSubjects")
-                button(ng-click="maxSubjects = 6") - See Less
+                button.clear-button(ng-click="maxSubjects = 6") 
+                  i.fa.fa-minus-square-o
+                  span  See Less
             div.resource-select-wrapper.select-row
               span.bold Curriculum Resource Type
               div.news-filters(ng-repeat="tag in curriculumTypeTags",style="display: flex;" ng-click="ctrl.changeCurriculumTypeTag(tag.Tag);"  ng-show="$index  <= maxContent")
@@ -40,7 +52,7 @@ div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
                   span {{tag.Tag}}
                   br 
           div.resources-wrapper
-            span.resoures-header.bold  Results:
+            span.resoures-header(ng-show='gradeFilter != "" || subjectFilter  != "" || contentTypeFilter  != "" || curriculumFilter  != ""') {{gradeAndSubjectArray.length}} Results for:
             div.chips-wrapper
               div.filter-chip(ng-show="gradeFilter != ''" ng-click="ctrl.changeGradeTag('');")
                 span {{gradeFilter}}
@@ -95,7 +107,7 @@ div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
                   span {{tag.Tag}}
                   br 
           div.resources-wrapper
-            span.resoures-header.bold  Results:
+            span.resoures-header.bold(ng-show='curriculumTypeFilter  != "" || contentTypeFilter  != "" || curriculumFilter  != ""') {{curriculumArray.length}} Results for:
             div.chips-wrapper
               div.filter-chip(ng-show="curriculumFilter != ''" ng-click="ctrl.changeCurriculumTag('',true);")
                 span {{curriculumFilter}}
@@ -107,9 +119,15 @@ div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
                 span {{contentTypeFilter}}
                     span.remove-chip &nbsp;&nbsp;x
             div.filter-alert-area(ng-show="resourceArray.length == 0")
-              span(ng-show="gradeFilter == '' && subjectFilter == '' && typeFilter == ''") Please select search criteria:
-              span(ng-show="!(gradeFilter == '' && subjectFilter == '' && typeFilter == '')") No results match the current search criteria
-            div.resource-skeleton(ng-show="resourceArray.length == 0 && gradeFilter == '' && subjectFilter == '' && typeFilter == ''")
+              span(ng-show="curriculumTypeFilter == '' && contentTypeFilter == '' && curriculumFilter == ''") Please select search criteria:
+              span(ng-show="!(curriculumTypeFilter == '' && contentTypeFilter == '' && curriculumFilter == '')") No results match the current search criteria
+            div
+              span Sort By
+              select.teacher-select.no-padding(style='margin-left: 15px')
+                option(selected="" value="") Grade
+                option(value="") Subject
+                
+            div.resource-skeleton(ng-show="curriculumArray.length == 0 && curriculumFilter == '' && contentTypeFilter == '' && curriculumTypeFilter == ''")
               hr.thin-padding-hr
               div.skeleton-header
               div.skeleton-metadata
