--- a/public/css/main.less
+++ b/public/css/main.less
@@ -715,9 +715,11 @@ padding-bottom: 30px;
   margin-top: 15px;
 }
 .popover{
-  z-index: 9999;
+  z-index: 99999;
 }
-
+.popover.bottom{
+  z-index: 99999;
+}
 .thin-padding-hr{
   margin-top: 5px;
   margin-bottom: 10px;
