--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -1,6 +1,22 @@
 div(ng-controller='navController' Id="navDiv")
   .left-nav.top.l1-nav
-    a.popover-dismiss(ng-click="ctrl.redirectToL1Nav(userItem)" tabindex="0" style="display: block;")
+    a.popover-dismiss.popover-icon( tabindex="0" style="display: block;"  
+      data-container="body" 
+      data-toggle="popover" 
+      data-placement="bottom"
+      data-html="true"
+      data-content="\
+        <div><a href='userInfo.html'>User Profile</a></div>\
+        <hr class='thin-padding-hr'/>\
+        <div><a  href='password.html'>Change Password<a></div>\
+        <hr class='thin-padding-hr'/>\
+        <div><a  href='locpreffrences.html'>Location Prefrences<a></div>\
+        <hr class='thin-padding-hr'/>\
+        <div><a  href='apppreffs.html'>App Prefrences<a></div>\
+        <hr class='thin-padding-hr'/>\
+        <div><a  href='newssubs.html'>News Subscriptions<a></div>\
+        <hr class='thin-padding-hr'/>\
+        <div><a  href='reportanerror.html'>Report an Error<a></div>")
       .user-pane
         .user-wrapper
           img.user-icon(src="images/usericon.png")
